--- a/socrates.ipynb
+++ b/socrates.ipynb
@@ -6,7 +6,7 @@
       "name": "socrates.ipynb",
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyOKaMRXklCRN7HIdhfJag3W",
+      "authorship_tag": "ABX9TyPXnUWPOKQjzY2dJ6VTCTn1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,120 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/xSakix/AI_colab_notebooks/blob/master/socrates.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6HG5IqwASzMB",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Socrates\n",
+        "\n",
+        "Text data downloaded from https://www.gutenberg.org/ebooks/search/?query=socrates .\n",
+        "\n",
+        "Model used is GPT-2. \n",
+        "\n",
+        "The goal was if we can generate text as Socrates, or rather some 'philosopher' given some key/querry/question.\n",
+        "\n",
+        "Looks as if it can be done in some manner with GPT-2 and it produces coherent answers. But the require a degree of interpretation. \n",
+        "\n",
+        "With greedy sampling it tends to get stuck on the same sentence.\n",
+        "\n",
+        "Some examples:\n",
+        "\n",
+        "# With 1MB text\n",
+        "\n",
+        "## What is the meaning of life?\n",
+        "\n",
+        "Heaven answers\n",
+        "\n",
+        "You can say anything.!\n",
+        "\n",
+        "## What does it mean to love?\n",
+        "\n",
+        "It means that we, by our freemen,!\n",
+        "\n",
+        "## Does a multiverse exists?\n",
+        "\n",
+        "The answer is that, if it did exist, then!\n",
+        "\n",
+        "\n",
+        "## What should i do with life?\n",
+        "\n",
+        "The answer may be, that I should suffer that!\n",
+        "\n",
+        "# With 6MB text and generated length of 200 chars\n",
+        "\n",
+        "## investment\n",
+        "\n",
+        "investment, of which it must have\n",
+        "been in the pursuit of profit; and such has been the professed manner of\n",
+        "enchantment--herein lies the reason why;--For I think,\n",
+        "then, that although a great deal of what we call art may be effected by\n",
+        "making use of the medium of discourse, or the art of reasoning, or of\n",
+        "experimenting with things, whether love or lust or any other\n",
+        "impediment, yet it is\n",
+        "virtually impossible for any one to imagine that he, when he makes use of any\n",
+        "thing, is really able to produce a clear and convincing impression of it or of\n",
+        "that which he does not perceive. For the impossibility of such a\n",
+        "implication leads to an object of comparison--in this the real one\n",
+        "is attained, and every thing which is produced is made clear and\n",
+        "presentable to every one. And this is the reason why we\n",
+        "refuse to pay attention to men of!\n",
+        "\n",
+        "## What is work?\n",
+        "\n",
+        "**THEAETETUS: And that would be called doing.**\n",
+        "\n",
+        "STRANGER: Yes, and of whom does health work?\n",
+        "\n",
+        "THEAETETUS: Of the menses; and therefore, my meaning is, not that we speak of meats and wine\n",
+        "as being of two kinds--the good, and the evil.\n",
+        "\n",
+        "STRANGER: Certainly.\n",
+        "\n",
+        "THEAETETUS: And the good is the smallest of the\n",
+        "spirits which bear upon us; and the evil, as is well known, is a kind\n",
+        "of meanness, which, by the tender sweet sounds in our ears, if we must\n",
+        "understand it, is unconsciously ended in the end in the pleasures of the\n",
+        "soul.\n",
+        "\n",
+        "STRANGER: Of course.\n",
+        "\n",
+        "THEAETETUS: And what is the aim of pleasure?\n",
+        "\n",
+        "STRANGER: Well, to make love some other color or!\n",
+        "\n",
+        "\n",
+        "## Should one prefer family or work?\n",
+        "\n",
+        "THEAETETUS: In this opinion, Simmias, my friend, we have enough of you, for now we will get along as well as\n",
+        "about as we can,\n",
+        "and then you shall be happy?\n",
+        "\n",
+        "STRANGER: He agrees; and if he could not agree with Simmias, I too should\n",
+        "consider myself right in saying that no man is happier than another if his\n",
+        "company is in some kind of disgrace.\n",
+        "\n",
+        "THEAETETUS: True.\n",
+        "\n",
+        "**STRANGER: Then you should be happy?**\n",
+        "\n",
+        "**THEAETETUS: Certainly; if you desire to live as well as you can. **\n",
+        "\n",
+        "STRANGER: And is any one happier than another?\n",
+        "\n",
+        "THEAETETUS: Certainly.\n",
+        "\n",
+        "STRANGER: And if you could make him any better?\n",
+        "\n",
+        "THEAETETUS: Yes.\n",
+        "\n",
+        "STRANGER!\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -1185,7 +1299,7 @@
       "metadata": {
         "id": "ljYrA1p1UkMC",
         "colab_type": "code",
-        "outputId": "46877c36-8584-456a-9f1c-5c327a3347cb",
+        "outputId": "e5c43e90-09e6-45cf-8e99-246dc9cef18b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -1194,20 +1308,20 @@
       "source": [
         "!python transformers/examples/run_generation.py --model_type=gpt2 --model_name_or_path='/content/drive/My Drive/socrates/output' --no_cuda --length 200 --temperature 1.0"
       ],
-      "execution_count": 13,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "02/18/2020 07:35:48 - INFO - transformers.tokenization_utils -   Model name '/content/drive/My Drive/socrates/output' not found in model shortcut name list (gpt2, gpt2-medium, gpt2-large, gpt2-xl, distilgpt2). Assuming '/content/drive/My Drive/socrates/output' is a path, a model identifier, or url to a directory containing tokenizer files.\n",
-            "02/18/2020 07:35:48 - INFO - transformers.tokenization_utils -   Didn't find file /content/drive/My Drive/socrates/output/added_tokens.json. We won't load it.\n",
-            "02/18/2020 07:35:48 - INFO - transformers.tokenization_utils -   loading file /content/drive/My Drive/socrates/output/vocab.json\n",
-            "02/18/2020 07:35:48 - INFO - transformers.tokenization_utils -   loading file /content/drive/My Drive/socrates/output/merges.txt\n",
-            "02/18/2020 07:35:48 - INFO - transformers.tokenization_utils -   loading file None\n",
-            "02/18/2020 07:35:48 - INFO - transformers.tokenization_utils -   loading file /content/drive/My Drive/socrates/output/special_tokens_map.json\n",
-            "02/18/2020 07:35:48 - INFO - transformers.tokenization_utils -   loading file /content/drive/My Drive/socrates/output/tokenizer_config.json\n",
-            "02/18/2020 07:35:49 - INFO - transformers.configuration_utils -   loading configuration file /content/drive/My Drive/socrates/output/config.json\n",
-            "02/18/2020 07:35:49 - INFO - transformers.configuration_utils -   Model config GPT2Config {\n",
+            "02/18/2020 08:03:52 - INFO - transformers.tokenization_utils -   Model name '/content/drive/My Drive/socrates/output' not found in model shortcut name list (gpt2, gpt2-medium, gpt2-large, gpt2-xl, distilgpt2). Assuming '/content/drive/My Drive/socrates/output' is a path, a model identifier, or url to a directory containing tokenizer files.\n",
+            "02/18/2020 08:03:52 - INFO - transformers.tokenization_utils -   Didn't find file /content/drive/My Drive/socrates/output/added_tokens.json. We won't load it.\n",
+            "02/18/2020 08:03:52 - INFO - transformers.tokenization_utils -   loading file /content/drive/My Drive/socrates/output/vocab.json\n",
+            "02/18/2020 08:03:52 - INFO - transformers.tokenization_utils -   loading file /content/drive/My Drive/socrates/output/merges.txt\n",
+            "02/18/2020 08:03:52 - INFO - transformers.tokenization_utils -   loading file None\n",
+            "02/18/2020 08:03:52 - INFO - transformers.tokenization_utils -   loading file /content/drive/My Drive/socrates/output/special_tokens_map.json\n",
+            "02/18/2020 08:03:52 - INFO - transformers.tokenization_utils -   loading file /content/drive/My Drive/socrates/output/tokenizer_config.json\n",
+            "02/18/2020 08:03:52 - INFO - transformers.configuration_utils -   loading configuration file /content/drive/My Drive/socrates/output/config.json\n",
+            "02/18/2020 08:03:52 - INFO - transformers.configuration_utils -   Model config GPT2Config {\n",
             "  \"architectures\": [\n",
             "    \"GPT2LMHeadModel\"\n",
             "  ],\n",
@@ -1259,23 +1373,34 @@
             "  \"vocab_size\": 50257\n",
             "}\n",
             "\n",
-            "02/18/2020 07:35:49 - INFO - transformers.modeling_utils -   loading weights file /content/drive/My Drive/socrates/output/pytorch_model.bin\n",
-            "02/18/2020 07:35:54 - INFO - __main__ -   Namespace(device=device(type='cpu'), k=0, length=200, model_name_or_path='/content/drive/My Drive/socrates/output', model_type='gpt2', n_gpu=0, no_cuda=True, p=0.9, padding_text='', prompt='', repetition_penalty=1.0, seed=42, stop_token=None, temperature=1.0, xlm_language='')\n",
-            "Model prompt >>> investment\n",
-            "investment, of which it must have\n",
-            "been in the pursuit of profit; and such has been the professed manner of\n",
-            "enchantment--herein lies the reason why;--For I think,\n",
-            "then, that although a great deal of what we call art may be effected by\n",
-            "making use of the medium of discourse, or the art of reasoning, or of\n",
-            "experimenting with things, whether love or lust or any other\n",
-            "impediment, yet it is\n",
-            "virtually impossible for any one to imagine that he, when he makes use of any\n",
-            "thing, is really able to produce a clear and convincing impression of it or of\n",
-            "that which he does not perceive. For the impossibility of such a\n",
-            "implication leads to an object of comparison--in this the real one\n",
-            "is attained, and every thing which is produced is made clear and\n",
-            "presentable to every one. And this is the reason why we\n",
-            "refuse to pay attention to men of!\n"
+            "02/18/2020 08:03:52 - INFO - transformers.modeling_utils -   loading weights file /content/drive/My Drive/socrates/output/pytorch_model.bin\n",
+            "02/18/2020 08:03:57 - INFO - __main__ -   Namespace(device=device(type='cpu'), k=0, length=200, model_name_or_path='/content/drive/My Drive/socrates/output', model_type='gpt2', n_gpu=0, no_cuda=True, p=0.9, padding_text='', prompt='', repetition_penalty=1.0, seed=42, stop_token=None, temperature=1.0, xlm_language='')\n",
+            "Model prompt >>> Should one prefer family or work?\n",
+            "Should one prefer family or work?\n",
+            "\n",
+            "THEAETETUS: In this opinion, Simmias, my friend, we have enough of you, for now we will get along as well as\n",
+            "about as we can,\n",
+            "and then you shall be happy?\n",
+            "\n",
+            "STRANGER: He agrees; and if he could not agree with Simmias, I too should\n",
+            "consider myself right in saying that no man is happier than another if his\n",
+            "company is in some kind of disgrace.\n",
+            "\n",
+            "THEAETETUS: True.\n",
+            "\n",
+            "STRANGER: Then you should be happy?\n",
+            "\n",
+            "THEAETETUS: Certainly; if you desire to live as well as you can.\n",
+            "\n",
+            "STRANGER: And is any one happier than another?\n",
+            "\n",
+            "THEAETETUS: Certainly.\n",
+            "\n",
+            "STRANGER: And if you could make him any better?\n",
+            "\n",
+            "THEAETETUS: Yes.\n",
+            "\n",
+            "STRANGER!\n"
           ],
           "name": "stdout"
         }
