--- a/socrates.ipynb
+++ b/socrates.ipynb
@@ -6,7 +6,7 @@
       "name": "socrates.ipynb",
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPXnUWPOKQjzY2dJ6VTCTn1",
+      "authorship_tag": "ABX9TyOHBdTUIpj5Jdjx6qdqz6Rn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,11 +36,11 @@
         "\n",
         "Text data downloaded from https://www.gutenberg.org/ebooks/search/?query=socrates .\n",
         "\n",
-        "Model used is GPT-2. \n",
+        "Model used is GPT-2 and finete it with text data. \n",
         "\n",
         "The goal was if we can generate text as Socrates, or rather some 'philosopher' given some key/querry/question.\n",
         "\n",
-        "Looks as if it can be done in some manner with GPT-2 and it produces coherent answers. But the require a degree of interpretation. \n",
+        "Looks as if it can be done in some manner with GPT-2 and it produces coherent answers. But they require a degree of interpretation. \n",
         "\n",
         "With greedy sampling it tends to get stuck on the same sentence.\n",
         "\n",
