--- a/socrates.ipynb
+++ b/socrates.ipynb
@@ -6,7 +6,7 @@
       "name": "socrates.ipynb",
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyOHBdTUIpj5Jdjx6qdqz6Rn",
+      "authorship_tag": "ABX9TyMMET08oWS92EMpGRlZ9eZe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -136,7 +136,163 @@
         "\n",
         "STRANGER!\n",
         "\n",
-        "\n"
+        "## How to build attention? (length=400)\n",
+        "\n",
+        "THEAETETUS: You will admit that not only is mind itself the art of\n",
+        "thought, but the subject also of thought. The highest and highest\n",
+        "dream of all is the andere and the contemplation of all things.\n",
+        "\n",
+        "THEAETETUS: As you will note, this art requires in your view a knowledge of\n",
+        "their concrete nature; and for your object the attainment of knowledge about all\n",
+        "things, the subject will be dependent on the the contemplation of abstract ideas\n",
+        "of each in his own right.\n",
+        "\n",
+        "STRANGER: That is the corollary of the whole art of geometry and abstract\n",
+        "philosophy, which is to express the opinions of geometric\n",
+        "people.\n",
+        "\n",
+        "THEAETETUS: True.\n",
+        "\n",
+        "STRANGER: And therefore, in consequence of their art, they don't die, but\n",
+        "will persist.\n",
+        "\n",
+        "THEAETETUS: In all probability.\n",
+        "\n",
+        "STRANGER: There, then, is one final art which, being concerned with the\n",
+        "instruction of the sensible soul, teaches that which the soul knows to be\n",
+        "true. It is called wisdom.\n",
+        "\n",
+        "THEAETETUS: Then wisdom is abstract?\n",
+        "\n",
+        "STRANGER: What is abstract?\n",
+        "\n",
+        "THEAETETUS: You will probably recognise me.\n",
+        "\n",
+        "STRANGER: Shall we have it, then?\n",
+        "\n",
+        "THEAETETUS: Yes, my friend.\n",
+        "\n",
+        "STRANGER: Whence is knowledge derived?\n",
+        "\n",
+        "THEAETETUS: Yes, the essence of knowledge is by the absolute\n",
+        "necessity of abstract thought; but when abstract thought becomes absolute, when\n",
+        "knowledge becomes knowledge, that necessarily arises from ignorance, and is\n",
+        "necessarily derived.\n",
+        "\n",
+        "STRANGER: And in all likelihood, as, according to this dialectical method, there are two\n",
+        "variables of knowledge: one universal and!\n",
+        "\n",
+        "## Intelligence\n",
+        "\n",
+        "Intelligence,and does not doubt, as I am persuaded, that all things which have a\n",
+        "nature to them are in all likelihood naturally stable.\n",
+        "But if a man, following his own circumstances,\n",
+        "would rather have attained a higher intelligence than to live and do good, why should it be right to fly into ruin? This, I say, is one thing\n",
+        "which he should beware of, but another thing which he should beware\n",
+        "of. **For to fly into the mire or deserts or Hell is like going on a\n",
+        "great expedition to nowhere, not to find the good, but to find\n",
+        "the disease--doing ill and cowardice and wickedness and bad things--and if\n",
+        "these were not the things which he desires, what was? And if\n",
+        "he were in want of good goods, and lived with money, or had a good\n",
+        "and healthy wife, why should he put up with them? Why should he not follow his\n",
+        "natural inclination in all this?**\n",
+        "\n",
+        "**Suppose, then, that a man had little love, and did not like others--he wanted a\n",
+        "riddle--that he would find the letters and suffer what he pleased in a\n",
+        "small circle, and would walk round round and round like any man in a\n",
+        "circle until he had found the right answer. And if he were to stumble and run,\n",
+        "would he say, Alas!**\n",
+        "\n",
+        "# What is good? (lenght=800 :))\n",
+        "\n",
+        "THEAETETUS: If you desire, then I will explain it to you.\n",
+        "\n",
+        "STRANGER: Very true.\n",
+        "\n",
+        "THEAETETUS: But when the\n",
+        "following question arises, 'What is good?' you will surely\n",
+        "reply that it is the result of good desire or attention.\n",
+        "\n",
+        "STRANGER: Very true.\n",
+        "\n",
+        "THEAETETUS: Which leads to our next point:--if good desire is, therefore\n",
+        "anything else than something good, so that\n",
+        "some good (whether good or bad) is good, that is good, we will admit that there is good\n",
+        "other than good?\n",
+        "\n",
+        "STRANGER: Impossible.\n",
+        "\n",
+        "THEAETETUS: And that which is good, it is good--not evil,\n",
+        "nor good for that matter.\n",
+        "\n",
+        "STRANGER: True.\n",
+        "\n",
+        "THEAETETUS: But of what else can you explain good desire?\n",
+        "\n",
+        "STRANGER: To show that whatever is good is good.\n",
+        "\n",
+        "THEAETETUS: Clearly.\n",
+        "\n",
+        "STRANGER: And do you define good desire or good attention in the same way as\n",
+        "we define good desire or good attention in knowledge?\n",
+        "\n",
+        "THEAETETUS: I don't know the sort of word which would describe that, but I think\n",
+        "that most men in our time would agree that good\n",
+        "desires are good or good; but you will also agree that the old notion of\n",
+        "good attention which we already held to be the quality of intelligence is\n",
+        "determined by what experience has told us.\n",
+        "\n",
+        "STRANGER: Clearly.\n",
+        "\n",
+        "THEAETETUS: Let me come to you now and beg of you to explain to me the\n",
+        "contradictory force and impossibilities which the best, experienced in\n",
+        "reality, can exhibit in such matters as making friends,\n",
+        "conversing at parties, or playing dice? Can you tell me whether\n",
+        "they are good or bad? Do they obey you when you bring them\n",
+        "upon yourself or near you?\n",
+        "\n",
+        "STRANGER: Yes.\n",
+        "\n",
+        "THEAETETUS: Is there anything that you can say or do that cannot be told to\n",
+        "them?\n",
+        "\n",
+        "STRANGER: I cannot tell you.\n",
+        "\n",
+        "THEAETETUS: What do you mean?\n",
+        "\n",
+        "STRANGER: To be sure.\n",
+        "\n",
+        "THEAETETUS: Why, as I thought, has the more grandiose notion\n",
+        "of good and evil neglected?\n",
+        "\n",
+        "STRANGER: Not altogether so.\n",
+        "\n",
+        "THEAETETUS: You admit that, though these notions are imperatives,\n",
+        "they are absolutely necessary.\n",
+        "\n",
+        "STRANGER: True.\n",
+        "\n",
+        "THEAETETUS: When the aetetus hears a physician or physician-in-training say that\n",
+        "he has been suffering from malaria, and another physician\n",
+        "in a similar condition say that he has been suffering from cold, he believes\n",
+        "that he must be infected by those diseases, and thereupon urges his physician\n",
+        "to bring his friend the saltwater brine. Do you speak this way, Socrates?\n",
+        "\n",
+        "STRANGER: I don't speak it clearly, Theaetetus.\n",
+        "\n",
+        "THEAETETUS: Perhaps you mean to tell me the exact meaning of\n",
+        "arithmetic and geometry?\n",
+        "\n",
+        "STRANGER: What arithmetic I mean is that of parts; for the two most important\n",
+        "arithmetic are an element of colour and magnitude and sign, and a number of\n",
+        "other expressions, and each of them has two quantities--one with\n",
+        "increase and one with diminution.\n",
+        "\n",
+        "THEAETETUS: What is this number?\n",
+        "\n",
+        "STRANGER: Eleven, because one number is the 'double' and the other'multiply.'\n",
+        "\n",
+        "THEAET!\n"
       ]
     },
     {
@@ -1299,29 +1455,29 @@
       "metadata": {
         "id": "ljYrA1p1UkMC",
         "colab_type": "code",
-        "outputId": "e5c43e90-09e6-45cf-8e99-246dc9cef18b",
+        "outputId": "bb13c19a-a7ca-4f03-b6db-865f6b38af11",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
       "source": [
-        "!python transformers/examples/run_generation.py --model_type=gpt2 --model_name_or_path='/content/drive/My Drive/socrates/output' --no_cuda --length 200 --temperature 1.0"
+        "!python transformers/examples/run_generation.py --model_type=gpt2 --model_name_or_path='/content/drive/My Drive/socrates/output' --no_cuda --length 800"
       ],
-      "execution_count": 16,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "02/18/2020 08:03:52 - INFO - transformers.tokenization_utils -   Model name '/content/drive/My Drive/socrates/output' not found in model shortcut name list (gpt2, gpt2-medium, gpt2-large, gpt2-xl, distilgpt2). Assuming '/content/drive/My Drive/socrates/output' is a path, a model identifier, or url to a directory containing tokenizer files.\n",
-            "02/18/2020 08:03:52 - INFO - transformers.tokenization_utils -   Didn't find file /content/drive/My Drive/socrates/output/added_tokens.json. We won't load it.\n",
-            "02/18/2020 08:03:52 - INFO - transformers.tokenization_utils -   loading file /content/drive/My Drive/socrates/output/vocab.json\n",
-            "02/18/2020 08:03:52 - INFO - transformers.tokenization_utils -   loading file /content/drive/My Drive/socrates/output/merges.txt\n",
-            "02/18/2020 08:03:52 - INFO - transformers.tokenization_utils -   loading file None\n",
-            "02/18/2020 08:03:52 - INFO - transformers.tokenization_utils -   loading file /content/drive/My Drive/socrates/output/special_tokens_map.json\n",
-            "02/18/2020 08:03:52 - INFO - transformers.tokenization_utils -   loading file /content/drive/My Drive/socrates/output/tokenizer_config.json\n",
-            "02/18/2020 08:03:52 - INFO - transformers.configuration_utils -   loading configuration file /content/drive/My Drive/socrates/output/config.json\n",
-            "02/18/2020 08:03:52 - INFO - transformers.configuration_utils -   Model config GPT2Config {\n",
+            "02/18/2020 10:26:58 - INFO - transformers.tokenization_utils -   Model name '/content/drive/My Drive/socrates/output' not found in model shortcut name list (gpt2, gpt2-medium, gpt2-large, gpt2-xl, distilgpt2). Assuming '/content/drive/My Drive/socrates/output' is a path, a model identifier, or url to a directory containing tokenizer files.\n",
+            "02/18/2020 10:26:58 - INFO - transformers.tokenization_utils -   Didn't find file /content/drive/My Drive/socrates/output/added_tokens.json. We won't load it.\n",
+            "02/18/2020 10:26:58 - INFO - transformers.tokenization_utils -   loading file /content/drive/My Drive/socrates/output/vocab.json\n",
+            "02/18/2020 10:26:58 - INFO - transformers.tokenization_utils -   loading file /content/drive/My Drive/socrates/output/merges.txt\n",
+            "02/18/2020 10:26:58 - INFO - transformers.tokenization_utils -   loading file None\n",
+            "02/18/2020 10:26:58 - INFO - transformers.tokenization_utils -   loading file /content/drive/My Drive/socrates/output/special_tokens_map.json\n",
+            "02/18/2020 10:26:58 - INFO - transformers.tokenization_utils -   loading file /content/drive/My Drive/socrates/output/tokenizer_config.json\n",
+            "02/18/2020 10:26:58 - INFO - transformers.configuration_utils -   loading configuration file /content/drive/My Drive/socrates/output/config.json\n",
+            "02/18/2020 10:26:58 - INFO - transformers.configuration_utils -   Model config GPT2Config {\n",
             "  \"architectures\": [\n",
             "    \"GPT2LMHeadModel\"\n",
             "  ],\n",
@@ -1373,34 +1529,99 @@
             "  \"vocab_size\": 50257\n",
             "}\n",
             "\n",
-            "02/18/2020 08:03:52 - INFO - transformers.modeling_utils -   loading weights file /content/drive/My Drive/socrates/output/pytorch_model.bin\n",
-            "02/18/2020 08:03:57 - INFO - __main__ -   Namespace(device=device(type='cpu'), k=0, length=200, model_name_or_path='/content/drive/My Drive/socrates/output', model_type='gpt2', n_gpu=0, no_cuda=True, p=0.9, padding_text='', prompt='', repetition_penalty=1.0, seed=42, stop_token=None, temperature=1.0, xlm_language='')\n",
-            "Model prompt >>> Should one prefer family or work?\n",
-            "Should one prefer family or work?\n",
+            "02/18/2020 10:26:58 - INFO - transformers.modeling_utils -   loading weights file /content/drive/My Drive/socrates/output/pytorch_model.bin\n",
+            "02/18/2020 10:27:02 - INFO - __main__ -   Namespace(device=device(type='cpu'), k=0, length=800, model_name_or_path='/content/drive/My Drive/socrates/output', model_type='gpt2', n_gpu=0, no_cuda=True, p=0.9, padding_text='', prompt='', repetition_penalty=1.0, seed=42, stop_token=None, temperature=1.0, xlm_language='')\n",
+            "Model prompt >>> What is good?\n",
+            "What is good?\n",
             "\n",
-            "THEAETETUS: In this opinion, Simmias, my friend, we have enough of you, for now we will get along as well as\n",
-            "about as we can,\n",
-            "and then you shall be happy?\n",
+            "THEAETETUS: If you desire, then I will explain it to you.\n",
             "\n",
-            "STRANGER: He agrees; and if he could not agree with Simmias, I too should\n",
-            "consider myself right in saying that no man is happier than another if his\n",
-            "company is in some kind of disgrace.\n",
+            "STRANGER: Very true.\n",
             "\n",
-            "THEAETETUS: True.\n",
+            "THEAETETUS: But when the\n",
+            "following question arises, 'What is good?' you will surely\n",
+            "reply that it is the result of good desire or attention.\n",
             "\n",
-            "STRANGER: Then you should be happy?\n",
+            "STRANGER: Very true.\n",
             "\n",
-            "THEAETETUS: Certainly; if you desire to live as well as you can.\n",
+            "THEAETETUS: Which leads to our next point:--if good desire is, therefore\n",
+            "anything else than something good, so that\n",
+            "some good (whether good or bad) is good, that is good, we will admit that there is good\n",
+            "other than good?\n",
             "\n",
-            "STRANGER: And is any one happier than another?\n",
+            "STRANGER: Impossible.\n",
             "\n",
-            "THEAETETUS: Certainly.\n",
+            "THEAETETUS: And that which is good, it is good--not evil,\n",
+            "nor good for that matter.\n",
             "\n",
-            "STRANGER: And if you could make him any better?\n",
+            "STRANGER: True.\n",
             "\n",
-            "THEAETETUS: Yes.\n",
+            "THEAETETUS: But of what else can you explain good desire?\n",
             "\n",
-            "STRANGER!\n"
+            "STRANGER: To show that whatever is good is good.\n",
+            "\n",
+            "THEAETETUS: Clearly.\n",
+            "\n",
+            "STRANGER: And do you define good desire or good attention in the same way as\n",
+            "we define good desire or good attention in knowledge?\n",
+            "\n",
+            "THEAETETUS: I don't know the sort of word which would describe that, but I think\n",
+            "that most men in our time would agree that good\n",
+            "desires are good or good; but you will also agree that the old notion of\n",
+            "good attention which we already held to be the quality of intelligence is\n",
+            "determined by what experience has told us.\n",
+            "\n",
+            "STRANGER: Clearly.\n",
+            "\n",
+            "THEAETETUS: Let me come to you now and beg of you to explain to me the\n",
+            "contradictory force and impossibilities which the best, experienced in\n",
+            "reality, can exhibit in such matters as making friends,\n",
+            "conversing at parties, or playing dice? Can you tell me whether\n",
+            "they are good or bad? Do they obey you when you bring them\n",
+            "upon yourself or near you?\n",
+            "\n",
+            "STRANGER: Yes.\n",
+            "\n",
+            "THEAETETUS: Is there anything that you can say or do that cannot be told to\n",
+            "them?\n",
+            "\n",
+            "STRANGER: I cannot tell you.\n",
+            "\n",
+            "THEAETETUS: What do you mean?\n",
+            "\n",
+            "STRANGER: To be sure.\n",
+            "\n",
+            "THEAETETUS: Why, as I thought, has the more grandiose notion\n",
+            "of good and evil neglected?\n",
+            "\n",
+            "STRANGER: Not altogether so.\n",
+            "\n",
+            "THEAETETUS: You admit that, though these notions are imperatives,\n",
+            "they are absolutely necessary.\n",
+            "\n",
+            "STRANGER: True.\n",
+            "\n",
+            "THEAETETUS: When the aetetus hears a physician or physician-in-training say that\n",
+            "he has been suffering from malaria, and another physician\n",
+            "in a similar condition say that he has been suffering from cold, he believes\n",
+            "that he must be infected by those diseases, and thereupon urges his physician\n",
+            "to bring his friend the saltwater brine. Do you speak this way, Socrates?\n",
+            "\n",
+            "STRANGER: I don't speak it clearly, Theaetetus.\n",
+            "\n",
+            "THEAETETUS: Perhaps you mean to tell me the exact meaning of\n",
+            "arithmetic and geometry?\n",
+            "\n",
+            "STRANGER: What arithmetic I mean is that of parts; for the two most important\n",
+            "arithmetic are an element of colour and magnitude and sign, and a number of\n",
+            "other expressions, and each of them has two quantities--one with\n",
+            "increase and one with diminution.\n",
+            "\n",
+            "THEAETETUS: What is this number?\n",
+            "\n",
+            "STRANGER: Eleven, because one number is the 'double' and the other'multiply.'\n",
+            "\n",
+            "THEAET!\n"
           ],
           "name": "stdout"
         }
