--- a/seneca.ipynb
+++ b/seneca.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNbDU/t5sMMt/kC5KY2qvUZ",
+      "authorship_tag": "ABX9TyMN2N+6N5vu6+fw5tl0qkwE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,14 +40,16 @@
         "Model used is GPT-2 and finetuned. After 30 epochs, ~ 5 perplexity.\n",
         "\n",
         "## love (200 length)\n",
-        "\n",
-        "   Wherewith the bright red thread lashes the lyre, and where at the bath\n",
+        "<pre>\n",
+        "   Where with the bright red thread lashes the lyre, and where at the bath\n",
         "    The frenzied groan falls all the birds, for her name                  435\n",
         "    Is Ulysses; who will at her bidding tremble\n",
         "    For her ashes? I fall first from heaven\n",
         "    And there come to ruin the girl!\n",
-        "\t\n",
+        "\t</pre>\n",
+        "\n",
         "## Love (400 length)\n",
+        "<pre>\n",
         "Love, to whom it belongs;\n",
         "    Say, What shall I gain by doing this?\n",
         "    A prize which does not please men?                      10\n",
@@ -68,7 +70,7 @@
         "    So may I repay these anxious hands,\n",
         "    But make a second effort; by so doing,\n",
         "    I have shed the blood which my body deserved.               35!\n",
-        "\n",
+        "</pre>\n",
         "\t\n",
         "## What is the meaning of life?\n",
         "\n",
@@ -1101,7 +1103,7 @@
       "source": [
         "!python transformers/examples/run_generation.py --model_type=gpt2 --model_name_or_path='/content/drive/My Drive/seneca/output' --no_cuda --length 400"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
